force-app/main/default/objects/Event__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Corporate client account</description>
    <label>Client Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Client_Account</relationshipName>
    <type>Lookup</type>
</CustomField>