force-app/main/default/objects/Event__c/fields/Booked_Venue__c.field-meta.xml
<CustomField>
    <fullName>Booked_Venue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Confirmed venue booking — double-booking prevented by Apex trigger</description>
    <label>Booked Venue</label>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Events (Booked)</relationshipLabel>
    <relationshipName>Booked_Venue_Events</relationshipName>
    <type>Lookup</type>
</CustomField>