force-app/main/default/objects/Event__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Required when Status = Cancelled — enforced by Validation Rule</description>
    <label>Cancellation Reason</label>
    <type>TextArea</type>
</CustomField>