force-app/main/default/objects/Event__c/fields/Catering_Vendor_Status__c.field-meta.xml
<CustomField>
    <fullName>Catering_Vendor_Status__c</fullName>
    <formula>IF(Has_Catering_Vendor__c = TRUE, &quot;Complete&quot;, IF(Catering_Waived__c = TRUE, &quot;Waived&quot;, &quot;Missing&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catering Vendor Status</label>
    <type>Text</type>
</CustomField>