force-app/main/default/objects/Event__c/fields/Catering_Waived__c.field-meta.xml
<CustomField>
    <fullName>Catering_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Catering Waived</label>
    <type>Checkbox</type>
</CustomField>