force-app/main/default/objects/Event__c/fields/CCO__c.field-meta.xml
<CustomField>
    <fullName>CCO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>