force-app/main/default/objects/Event__c/fields/Client_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Client_Satisfaction__c</fullName>
    <description>Range 1-5. Captured at post-event wrap-up. Below 3 triggers Sales Manager alert.</description>
    <label>Client Satisfaction Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>