force-app/main/default/objects/Event__c/fields/Client_Testimonial__c.field-meta.xml
<CustomField>
    <fullName>Client_Testimonial__c</fullName>
    <description>Free text testimonial captured at wrap-up if client consented</description>
    <label>Client Testimonial</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>