force-app/main/default/objects/Event__c/fields/Cultural_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Considerations__c</fullName>
    <description>SENSITIVE — FLS restricted to Social Events team only</description>
    <label>Cultural / Religious Considerations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>