force-app/main/default/objects/Event__c/fields/Custom_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Custom_Payment_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Social Events — check to override default 50/50 payment structure</description>
    <label>Custom Payment Plan</label>
    <type>Checkbox</type>
</CustomField>