force-app/main/default/objects/Event__c/fields/Custom_Plan_Approved__c.field-meta.xml
<CustomField>
    <fullName>Custom_Plan_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by Approval Process when a below-40% deposit plan is approved</description>
    <label>Custom Plan Approved</label>
    <type>Checkbox</type>
</CustomField>