force-app/main/default/objects/Event__c/fields/Deposit_Milestone_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Milestone_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be checked later by a flow when a deposit payment milestone status becomes invoiced</description>
    <label>Deposit Milestone Invoiced</label>
    <type>Checkbox</type>
</CustomField>