force-app/main/default/objects/Event__c/fields/Deposit_Pct__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Pct__c</fullName>
    <description>Social Events — custom deposit % when overriding standard payment plan</description>
    <label>Deposit Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>