force-app/main/default/objects/Event__c/fields/Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Discount_Pct__c</fullName>
    <description>Auto-calculated. Triggers approval if above 10%.</description>
    <formula>IF(
  OR(
     Standard_Price_NewVersion__c  = 0,
    Quoted_Price__c &gt;= Standard_Price_NewVersion__c),0,(Standard_Price_NewVersion__c - Quoted_Price__c) / Standard_Price_NewVersion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>