force-app/main/default/objects/Event__c/fields/Dont_use_this__c.field-meta.xml
<CustomField>
    <fullName>Dont_use_this__c</fullName>
    <description>Benchmark price — used to calculate discount percentage</description>
    <label>Dont use this</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>