force-app/main/default/objects/Event__c/fields/Dress_Code__c.field-meta.xml
<CustomField>
    <fullName>Dress_Code__c</fullName>
    <description>Social Events only</description>
    <label>Dress Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>