force-app/main/default/objects/Event__c/fields/ead_Coordinator_Waived__c.field-meta.xml
<CustomField>
    <fullName>ead_Coordinator_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Coordinator Waived</label>
    <type>Checkbox</type>
</CustomField>