force-app/main/default/objects/Event__c/fields/Estimated_Vendor_Spend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Vendor_Spend__c</fullName>
    <label>Estimated Vendor Spend</label>
    <summarizedField>Vendor_Assignment__c.Agreed_Cost__c</summarizedField>
    <summaryForeignKey>Vendor_Assignment__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>