force-app/main/default/objects/Event__c/fields/Event_Type_Benchmark__c.field-meta.xml
<CustomField>
    <fullName>Event_Type_Benchmark__c</fullName>
    <label>Event Type Benchmark</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>