force-app/main/default/objects/Event__c/fields/Expected_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Headcount__c</fullName>
    <description>Required before Proposal Sent — enforced by Flow</description>
    <label>Expected Headcount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>