force-app/main/default/objects/Event__c/fields/Final_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Final_Headcount__c</fullName>
    <description>Required within 14 days of Event Start</description>
    <label>Final Headcount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>