force-app/main/default/objects/Event__c/fields/Final_Headcount_Status__c.field-meta.xml
<CustomField>
    <fullName>Final_Headcount_Status__c</fullName>
    <formula>IF(NOT(ISBLANK(Final_Headcount__c)), &quot;Complete&quot;, IF(Final_Headcount_Waived__c = TRUE, &quot;Waived&quot;, &quot;Missing&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Headcount Status</label>
    <type>Text</type>
</CustomField>