force-app/main/default/objects/Event__c/fields/Final_Headcount_Waived__c.field-meta.xml
<CustomField>
    <fullName>Final_Headcount_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Headcount Waived</label>
    <type>Checkbox</type>
</CustomField>