force-app/main/default/objects/Event__c/fields/First_Milestone_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>First_Milestone_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Milestone Invoiced</label>
    <type>Checkbox</type>
</CustomField>