force-app/main/default/objects/Event__c/fields/Guest_Children__c.field-meta.xml
<CustomField>
    <fullName>Guest_Children__c</fullName>
    <description>Social Events only</description>
    <label>Guest List Size (Children)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>