force-app/main/default/objects/Event__c/fields/Has_Catering_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Has_Catering_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Catering Vendor</label>
    <type>Checkbox</type>
</CustomField>