force-app/main/default/objects/Event__c/fields/HeadCount_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>HeadCount_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HeadCount Confirmation</label>
    <type>Checkbox</type>
</CustomField>