force-app/main/default/objects/Event__c/fields/Is_Discount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Discount_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to be set to true upon approval from sales manager</description>
    <label>Is Discount Approved</label>
    <type>Checkbox</type>
</CustomField>