force-app/main/default/objects/Event__c/fields/Is_QP_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_QP_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to be set upon Approval over quoted price</description>
    <label>Is QP Approved</label>
    <type>Checkbox</type>
</CustomField>