force-app/main/default/objects/Event__c/fields/Is_Social_Event__c.field-meta.xml
<CustomField>
    <fullName>Is_Social_Event__c</fullName>
    <formula>$RecordType.Name = &quot;Social Event&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Social Event</label>
    <type>Checkbox</type>
</CustomField>