force-app/main/default/objects/Event__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <description>Required when submitting event for pricing approval</description>
    <label>Approval Justification</label>
    <type>TextArea</type>
</CustomField>