force-app/main/default/objects/Event__c/fields/Lead_Coordinator_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Coordinator_Status__c</fullName>
    <formula>IF(NOT(ISBLANK(Lead_Coordinator__c)), &quot;Complete&quot;, IF(Lead_Coordinator_Waived__c = TRUE, &quot;Waived&quot;, &quot;Missing&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Coordinator Status</label>
    <type>Text</type>
</CustomField>