force-app/main/default/objects/Event__c/fields/Mid_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Mid_Payment_Status__c</fullName>
    <formula>IF(Deposit_Milestone_Invoiced__c = TRUE, &quot;Complete&quot;, IF(Mid_Payment_Waived__c = TRUE, &quot;Waived&quot;, &quot;Missing&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mid Payment Status</label>
    <type>Text</type>
</CustomField>