force-app/main/default/objects/Event__c/fields/Mid_Payment_Waived__c.field-meta.xml
<CustomField>
    <fullName>Mid_Payment_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mid Payment Waived</label>
    <type>Checkbox</type>
</CustomField>