force-app/main/default/objects/Event__c/fields/Min_Age__c.field-meta.xml
<CustomField>
    <fullName>Min_Age__c</fullName>
    <defaultValue>0</defaultValue>
    <description>0 = unrestricted. Public Events only.</description>
    <label>Minimum Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>