force-app/main/default/objects/Event__c/fields/Plus_One_Policy__c.field-meta.xml
<CustomField>
    <fullName>Plus_One_Policy__c</fullName>
    <description>Social Events only</description>
    <label>Plus-One Policy</label>
    <type>TextArea</type>
</CustomField>