force-app/main/default/objects/Event__c/fields/Preferred_Venue__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicative venue during inquiry stage</description>
    <label>Preferred Venue</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Retired venues cannot be selected for new bookings.</errorMessage>
        <filterItems>
            <field>Venue__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Retired</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Events (Preferred)</relationshipLabel>
    <relationshipName>Preferred_Venue_Events</relationshipName>
    <type>Lookup</type>
</CustomField>