force-app/main/default/objects/Event__c/fields/Prior_Status__c.field-meta.xml
<CustomField>
    <fullName>Prior_Status__c</fullName>
    <description>Hidden field — stores status before approval submission so rejection can restore it</description>
    <label>Prior Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>