force-app/main/default/objects/Event__c/fields/Private_Client__c.field-meta.xml
<CustomField>
    <fullName>Private_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Private client contact (Social Events only)</description>
    <label>Private Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Social Events</relationshipLabel>
    <relationshipName>Private_Client_Events</relationshipName>
    <type>Lookup</type>
</CustomField>