force-app/main/default/objects/Event__c/fields/Public_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Public_Event_Name__c</fullName>
    <description>Client-facing display name for Public Events</description>
    <label>Public Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>