force-app/main/default/objects/Event__c/fields/Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Price__c</fullName>
    <description>Required before Proposal Sent. Triggers approval if above 500000 EGP.</description>
    <label>Quoted Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>