force-app/main/default/objects/Event__c/fields/Refund_Policy__c.field-meta.xml
<CustomField>
    <fullName>Refund_Policy__c</fullName>
    <description>Public Events only</description>
    <label>Refund Policy Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>