force-app/main/default/objects/Event__c/fields/Retrospective_Notes__c.field-meta.xml
<CustomField>
    <fullName>Retrospective_Notes__c</fullName>
    <description>Internal notes only — not shared with client</description>
    <label>Retrospective Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>