force-app/main/default/objects/Event__c/fields/Sales_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Close_Date__c</fullName>
    <description>Must be after today and before Event Start Date</description>
    <label>Sales Close Date</label>
    <type>Date</type>
</CustomField>