force-app/main/default/objects/Event__c/fields/Sales_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Open_Date__c</fullName>
    <description>Public Events only</description>
    <label>Sales Open Date</label>
    <type>Date</type>
</CustomField>