force-app/main/default/objects/Event__c/fields/Second_Payment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Second_Payment_Percentage__c</fullName>
    <description>Represents the second payment percentage for a custom payment plan on Social Events. Must sum to 100% with Deposit Percentage.</description>
    <label>Second Payment Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>