force-app/main/default/objects/Event__c/fields/Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Special_Requests__c</fullName>
    <description>SENSITIVE — FLS restricted to Social Events team only</description>
    <label>Special Requests / Sensitivities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>