force-app/main/default/objects/Event__c/fields/Standard_Price__c.field-meta.xml
<CustomField>
    <fullName>Standard_Price__c</fullName>
    <description>Benchmark price — used to calculate discount percentage</description>
    <label>Standard Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>