force-app/main/default/objects/Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle stage. Values available per Record Type controlled by Flow validation.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry</fullName>
                <default>true</default>
                <label>Inquiry</label>
            </value>
            <value>
                <fullName>Initial Inquiry</fullName>
            </value>
            <value>
                <fullName>Consultation Scheduled</fullName>
            </value>
            <value>
                <fullName>Consultation Completed</fullName>
            </value>
            <value>
                <fullName>Proposal Sent</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>In Planning</fullName>
            </value>
            <value>
                <fullName>Executing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>On Sale</fullName>
            </value>
            <value>
                <fullName>Sales Paused</fullName>
            </value>
            <value>
                <fullName>Sold Out</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>