force-app/main/default/objects/Event__c/fields/Strategic_Notes__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Notes__c</fullName>
    <description>RESTRICTED — visible to Sales Manager and above only</description>
    <label>Internal Strategic Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>