force-app/main/default/objects/Event__c/fields/Tagline__c.field-meta.xml
<CustomField>
    <fullName>Tagline__c</fullName>
    <description>Public Events only</description>
    <label>Tagline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>