force-app/main/default/objects/Event__c/fields/Testimonial_Consent__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether client consented to share testimonial</description>
    <label>Testimonial Consent</label>
    <type>Checkbox</type>
</CustomField>