force-app/main/default/objects/Event__c/fields/Total_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Capacity__c</fullName>
    <description>Hard ceiling across all ticket tiers for Public Events</description>
    <label>Total Capacity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>