force-app/main/default/objects/Event__c/fields/Total_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Collected__c</fullName>
    <label>Total Collected</label>
    <summarizedField>Payment_Milestone__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment_Milestone__c.Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment_Milestone__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>