force-app/main/default/objects/Event__c/fields/Venue_Rate__c.field-meta.xml
<CustomField>
    <fullName>Venue_Rate__c</fullName>
    <description>Rate agreed for this specific event — may differ from Venue Standard Day Rate</description>
    <label>Agreed Venue Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>