force-app/main/default/objects/Event__c/fields/Venue_Status__c.field-meta.xml
<CustomField>
    <fullName>Venue_Status__c</fullName>
    <formula>IF(NOT(ISBLANK(Booked_Venue__c)), &quot;Complete&quot;, IF(Venue_Waived__c = TRUE, &quot;Waived&quot;, &quot;Missing&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue Status</label>
    <type>Text</type>
</CustomField>