force-app/main/default/objects/Event__c/fields/Venue_Waived__c.field-meta.xml
<CustomField>
    <fullName>Venue_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Venue Waived</label>
    <type>Checkbox</type>
</CustomField>