force-app/main/default/objects/Event__c/fields/Wrap_Up_Complete__c.field-meta.xml
<CustomField>
    <fullName>Wrap_Up_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when all 5 wrap-up items are confirmed by Lead Coordinator</description>
    <label>Wrap-Up Complete</label>
    <type>Checkbox</type>
</CustomField>