force-app/main/default/objects/Event__c/fields/Wrap_Up_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Wrap_Up_Due_Date__c</fullName>
    <formula>CASE(
  MOD(Event_End_Date__c - DATE(1900,1,7), 7),
  0, Event_End_Date__c + 7,
  1, Event_End_Date__c + 7,
  2, Event_End_Date__c + 7,
  3, Event_End_Date__c + 9,
  4, Event_End_Date__c + 8,
  5, Event_End_Date__c + 7,
  Event_End_Date__c + 7
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wrap Up Due Date</label>
    <type>Date</type>
</CustomField>