force-app/main/default/objects/Event__c/recordTypes/Corporate_Event.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Event</fullName>
    <active>true</active>
    <description>B2B corporate engagements — conferences, retreats, product launches</description>
    <label>Corporate Event</label>
</RecordType>