force-app/main/default/objects/Event__c/recordTypes/Public_Event.recordType-meta.xml
<RecordType>
    <fullName>Public_Event</fullName>
    <active>false</active>
    <description>Ticketed events hosted by Sahra open to the public</description>
    <label>Public Event</label>
</RecordType>