force-app/main/default/objects/Event__c/recordTypes/Social_Event.recordType-meta.xml
<RecordType>
    <fullName>Social_Event</fullName>
    <active>true</active>
    <description>Private personal celebrations — weddings, engagements, milestones</description>
    <label>Social Event</label>
</RecordType>