force-app/main/default/objects/Event__c/validationRules/Block_Proposal_Sent_Missing_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Proposal_Sent_Missing_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &apos;Proposal Sent&apos;),
  OR(
    AND(
      ISPICKVAL(PRIORVALUE(Status__c), &apos;Inquiry&apos;),
      RecordType.DeveloperName = &apos;Corporate_Event&apos;,
      OR(
        ISBLANK(Expected_Headcount__c),
        ISBLANK(TEXT(Event_Type__c)),
        ISBLANK(Event_Start_Date__c),
        ISBLANK(Quoted_Price__c)
      )
    ),
    AND(
      ISPICKVAL(PRIORVALUE(Status__c), &apos;Consultation Completed&apos;),
      RecordType.DeveloperName = &apos;Social_Event&apos;,
      OR(
        ISBLANK(Expected_Headcount__c),
        ISBLANK(TEXT(Event_Type__c)),
        ISBLANK(Event_Start_Date__c),
        ISBLANK(Quoted_Price__c)
      )
    )
  )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Cannot move to Proposal Sent. Expected Headcount, Event Type, Start Date, and Quoted Price must all be filled in.</errorMessage>
</ValidationRule>