force-app/main/default/objects/Event__c/validationRules/Cancellation_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &apos;Cancelled&apos;),
ISBLANK(Cancellation_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>A Cancellation Reason must be entered before an event can be cancelled.</errorMessage>
</ValidationRule>